--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,11 @@ indent_style=space
 indent_size=2
 trim_trailing_whitespace = true
 
+[*.{ts,css}]
+indent_style = tab
+indent_size = 4
+trim_trailing_whitespace = true
+
 [*.rb]
 indent_style=space
 indent_size=2
